--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="addModalTask">
                     <h2 class="addModalTaskH2 pAdd">Что нужно сделать?</h2>
-                    <input type="text" placeholder="Приготовить ужин" class="addModalTaskInput">
+                    <input type="text" placeholder="Приготовить ужин" id="addModalTaskInput" class="addModalTaskInput">
                 </div>
 
                 <div class="addModalTask addModalTaskDisplay">
@@ -208,83 +208,74 @@
                             <p class="ellipsisSpan pAddEleps"></p>
                         </div>
                     </div>
-                    <div class="checkСontainer">
-                        <div class="check">
-                            <input class="checkbox" type="checkbox">
-                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
+                    <div id="checkСontainer">
+
+
+                        <!--   <div class="checkСontainer">
+                            <div class="check">
+                                <input class="checkbox" type="checkbox">
+                                <p class="checkP pAdd">Приготовить вкусный ужин</p>
+                            </div>
+
+                            <div class="removal">
+                                <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
+                                <img src="../images/trash.svg" class="removalImg" alt="trash">
+                            </div>
                         </div>
 
-                        <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
-                            <img src="../images/trash.svg" class="removalImg" alt="trash">
+                           <div class="checkСontainer">
+                            <div class="check">
+                                <input class="checkbox" type="checkbox">
+                                <p class="checkP pAdd">Приготовить вкусный ужин</p>
+                            </div>
+
+                            <div class="removal">
+                                <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
+                                <img src="../images/trash.svg" class="removalImg" alt="trash">
+                            </div>
                         </div>
+
+                        <div class="checkСontainer">
+                            <div class="check">
+                                <input class="checkbox" type="checkbox">
+                                <p class="checkP pAdd">Приготовить вкусный ужин</p>
+                            </div>
+
+                            <div class="removal">
+                                <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
+                                <img src="../images/trash.svg" class="removalImg" alt="trash">
+                            </div>
+                        </div> -->
                     </div>
-
-                    <div class="checkСontainer">
-                        <div class="check">
-                            <input class="checkbox" type="checkbox">
-                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
-                        </div>
-
-                        <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
-                            <img src="../images/trash.svg" class="removalImg" alt="trash">
-                        </div>
-                    </div>
-
-                    <div class="checkСontainer">
-                        <div class="check">
-                            <input class="checkbox" type="checkbox">
-                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
-                        </div>
-
-                        <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
-                            <img src="../images/trash.svg" class="removalImg" alt="trash">
-                        </div>
-                    </div>
-
-                    <div class="checkСontainer">
-                        <div class="check">
-                            <input class="checkbox" type="checkbox">
-                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
-                        </div>
-
-                        <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
-                            <img src="../images/trash.svg" class="removalImg" alt="trash">
-                        </div>
-                    </div>
-
                     <div class="successestitleHeader">
                         <p class="successesTitle">Завершенные задачи</p>
 
                     </div>
+                    <div id="checkСontainer1">
+                        <!--  <div class="checkСontainer">
+                            <div class="check">
+                                <input class="checkbox" type="checkbox">
+                                <p class="checkP pAdd">Приготовить вкусный ужин</p>
+                            </div>
 
-                    <div class="checkСontainer">
-                        <div class="check">
-                            <input class="checkbox" type="checkbox">
-                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
+                            <div class="removal">
+                                <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
+                                <img src="../images/trash.svg" class="removalImg" alt="trash">
+                            </div>
                         </div>
 
-                        <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
-                            <img src="../images/trash.svg" class="removalImg" alt="trash">
-                        </div>
+                        <div class="checkСontainer">
+                            <div class="check">
+                                <input class="checkbox" type="checkbox">
+                                <p class="checkP pAdd">Приготовить вкусный ужин</p>
+                            </div>
+
+                            <div class="removal">
+                                <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
+                                <img src="../images/trash.svg" class="removalImg" alt="trash">
+                            </div>
+                        </div> -->
                     </div>
-
-                    <div class="checkСontainer">
-                        <div class="check">
-                            <input class="checkbox" type="checkbox">
-                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
-                        </div>
-
-                        <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
-                            <img src="../images/trash.svg" class="removalImg" alt="trash">
-                        </div>
-                    </div>
-
                 </div>
 
 
