--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -50,10 +50,13 @@
 
                     <p class="illumination"></p>
                 </div>
+                <div class="inputCategoryDiv"></div>
+                <input type="text" placeholder="добавьте задачу" class="inputCategory">
+                <input type="text" placeholder="удалить" class="inputCategoryDel">
 
                 <div class="addition">
                     <img class="ico1 " src="../images/plus-square.svg" alt="plus-square">
-                    <div class="">Добавить</div>
+                    <div class="addTasks">Добавить</div>
 
                 </div>
             </div>
@@ -78,12 +81,12 @@
 
                 <div class="exid_menu addOutput">
                     <img class="ico3 imgMoon" src="../images/user.svg" alt="user">
-                    <div class="exidHover pAdd">Личный кабинет</div>
+                    <a href="userAccount.html" class="exidHover pAdd" id="exidHover">Личный кабинет</a>
                 </div>
 
                 <div class="exid_menu addOutput">
                     <img class="ico3 imgMoon" src="../images/moon.svg" alt="moon">
-                    <div class="exidHover pAdd" id="dark">Темный режим</div>
+                    <div class="exidHover pAdd dark">Темный режим</div>
                 </div>
 
                 <div class="exid_menu addOutput">
@@ -104,13 +107,15 @@
             </div>
         </div>
     </section>
+
+
     <section class="mainUnit">
         <header class=" addClass">
             <div class="newTask ">
                 <img class="cross " src="../images/Group 1.svg" alt="Group 1">
                 <p class="crossP">Новая задача</p>
             </div>
-            <img class="Times_of_Day imgMoon" src="../images/moon.svg" alt="moon">
+            <img class="Times_of_Day imgMoon imgMoonDay" src="../images/moon.svg" alt="moon">
             <div class="user">
                 <p class="userName pAdd">Хорошего дня, username</p>
                 <img class="userImg" src="../images/header__avatar.svg" alt="userImg">
@@ -134,8 +139,12 @@
                 <div class="addModalTask addModalTaskDisplay">
                     <div class="addModalTaskСategory">
                         <h2 class="addModalTaskH2 pAdd">Категория</h2>
-                        <select class="addModalTaskInput">
-                            <option value="1">Выбрать</option>
+                        <select class="addModalTaskInput addModalTaskSelect">
+                            <option value="1">Дом</option>
+                            <option value="2">Семья</option>
+                            <option value="3">Работа</option>
+                            <option value="4">Спорт</option>
+
                         </select>
                     </div>
                     <div class="addModalTaskСategory">
@@ -338,6 +347,8 @@
 
     <script src="../js/timeData.js"></script>
     <script src="../js/mainPage.js"></script>
+    <script src="../js/addMainPage.js"></script>
+
 </body>
 
 </html>
