--- a/index/signup.html
+++ b/index/signup.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Nunito:wght@400;600&family=Roboto&display=swap"
         rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -28,24 +29,25 @@
 
     <section class="center">
         <div class="card">
-            <form id="login">
+            <form id="loginAdd">
                 <div class="text_container">
-                    <p class="text-center">Вход в аккаунт</p>
+                    <p class="text-center">Регистрация</p>
                 </div>
                 <div class="form-group">
-                    <input class="form-control item" type="email" name="email" id="email" placeholder="Email" required>
+                    <input class="form-control item" type="email" name="email" id="emailAdd" placeholder="Email"
+                        required>
                 </div>
                 <div class="form-group">
-                    <input class="form-control item" type="password" name="Пароль" minlength="6" id="password"
+                    <input class="form-control item" type="password" name="Пароль" minlength="6" id="passwordAdd"
                         placeholder="Пароль" required>
                 </div>
 
                 <div class="form-group1">
-                    <button class="btn btn-primary btn-block create-account" type="submit">Войти</button>
+                    <button class="btn btn-primary btn-block create-account" type="submit">Зарегистрироваться</button>
                 </div>
 
                 <div class="registration">
-                    <p></p>Еще нет аккаунта? </p><a href="signup.html" id="regist"> Регистрация</a>
+                    <a href="index.html" id="regist"> Назад</ф>
                 </div>
                 <div class="separation">
                     <hr class="hr">
@@ -73,7 +75,7 @@
 
 
     <script src="../js/registration.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="../js/signup.js"></script>
 
 </body>
 
