--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -133,7 +133,8 @@
                 </div>
                 <div class="addModalTask">
                     <h2 class="addModalTaskH2 pAdd">Что нужно сделать?</h2>
-                    <input type="text" placeholder="Приготовить ужин" id="addModalTaskInput" class="addModalTaskInput">
+                    <input type="text" placeholder="Приготовить ужин" id="addModalTaskInput" class="addModalTaskInput"
+                        maxlength="30">
                 </div>
 
                 <div class="addModalTask addModalTaskDisplay">
@@ -217,7 +218,7 @@
                             <p class="ellipsisSpan pAddEleps"></p>
                         </div>
                     </div>
-                    <div id="checkСontainer">
+                    <div id="checkСontainer" data-table='2'>
 
 
                         <!--   <div class="checkСontainer">
@@ -260,7 +261,7 @@
                         <p class="successesTitle">Завершенные задачи</p>
 
                     </div>
-                    <div id="checkСontainer1">
+                    <div class="checkСontainer1">
                         <!--  <div class="checkСontainer">
                             <div class="check">
                                 <input class="checkbox" type="checkbox">
