--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
     <section class="menu addClass">
         <div class="menuNext ">
             <div class="left_header">
@@ -24,7 +25,7 @@
                 <p class="p_left_header">Tasks Book</p>
             </div>
 
-            <div class="categories">
+            <div class="categories" data-container="1">
                 <h1 class="h1">Категории</h1>
                 <div class="subcategory">
                     <img class="ico imgMoon" src="../images/home.svg" alt="home">
@@ -32,19 +33,19 @@
                     <p style="display: block;" class="illumination"></p>
                 </div>
 
-                <div class="subcategory">
+                <div class="subcategory" data-container="2">
                     <img class="ico imgMoon" src="../images/users.svg" alt="users">
                     <div class="pAdd mark"> Семья</div>
                     <p class="illumination"></p>
                 </div>
 
-                <div class="subcategory">
+                <div class="subcategory" data-container="3">
                     <img class="ico imgMoon" src="../images/briefcase.svg" alt="briefcase">
                     <div class="pAdd mark"> Работа </div>
                     <p class="illumination"></p>
                 </div>
 
-                <div class="subcategory">
+                <div class="subcategory" data-container="4">
                     <img class="ico imgMoon" src="../images/zap.svg" alt="zap">
                     <div class="pAdd mark">Спорт </div>
 
