--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -25,9 +25,9 @@
                 <p class="p_left_header">Tasks Book</p>
             </div>
 
-            <div class="categories" data-container="1">
+            <div class="categories">
                 <h1 class="h1">Категории</h1>
-                <div class="subcategory">
+                <div class="subcategory" data-container="1">
                     <img class="ico imgMoon" src="../images/home.svg" alt="home">
                     <div class="pAdd mark">Дом</div>
                     <p style="display: block;" class="illumination"></p>
